--- a/.github/workflows/build-index.yml
+++ b/.github/workflows/build-index.yml
@@ -9,8 +9,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: yarn install
+
       - name: Build index
         run: node scripts/build-index.js
+
       - name: Commit index
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
